@startuml

title __POLYNOMIAL's Class Diagram__\n

  namespace com.example.polynomial {
    class com.example.polynomial.Graph {
        - function : ArrayList<tableRow>
        - fx : TextView
        - ptsSeries : LineGraphSeries<DataPoint>
        - x : double
        - y : double
        # onCreate()
        - calculateFx()
    }
  }
  

  namespace com.example.polynomial {
    class com.example.polynomial.MainActivity {
        - DB_NAME : String
        - TABLE_NAME : String
        - cList : ListView
        - degree : EditText
        - polDB : SQLiteDatabase
        + addNewPol()
        + degreeEntered()
        + gotoExistPols()
        # onCreate()
    }
  }
  

  namespace com.example.polynomial {
    class com.example.polynomial.MainActivity.ListItem {
        - caption : String
        + getCaption()
    }
  }
  

  namespace com.example.polynomial {
    class com.example.polynomial.MainActivity.MyAdapter {
        - mInflater : LayoutInflater
        - myItems : ArrayList<ListItem>
        + MyAdapter()
        + getCount()
        + getItem()
        + getItemId()
        + getMyItems()
        + getView()
    }
  }
  

  namespace com.example.polynomial {
    class com.example.polynomial.MainActivity.ViewHolder {
        - caption : EditText
    }
  }
  

  namespace com.example.polynomial {
    class com.example.polynomial.PolynomialActions {
        - DB_NAME : String
        - TABLE_NAME : String
        - cList : ListView
        - funcTitle : TextView
        - function : ArrayList<tableRow>
        - polDB : SQLiteDatabase
        - polFormula : String
        + deleteThePol()
        + gotoGraph()
        + updateThePol()
        # onCreate()
        - buildFunctionFormula()
        - buildList()
        - getNumber()
        - updateTitle()
    }
  }
  

  namespace com.example.polynomial {
    class com.example.polynomial.PolynomialActions.ListItem {
        - caption : String
        + getCaption()
    }
  }
  

  namespace com.example.polynomial {
    class com.example.polynomial.PolynomialActions.MyAdapter {
        - mInflater : LayoutInflater
        - myItems : ArrayList<ListItem>
        + MyAdapter()
        + getCount()
        + getItem()
        + getItemId()
        + getMyItems()
        + getView()
    }
  }
  

  namespace com.example.polynomial {
    class com.example.polynomial.PolynomialActions.ViewHolder {
        - caption : EditText
    }
  }
  

  namespace com.example.polynomial {
    class com.example.polynomial.PolynomialsView {
        - DB_NAME : String
        - TABLE_NAME : String
        - adapter : ArrayAdapter
        - funcsDivided : ArrayList<ArrayList<tableRow>>
        - functions : ArrayList<String>
        - polDB : SQLiteDatabase
        - polsList : ListView
        - rows : ArrayList<tableRow>
        + onStart()
        # onCreate()
        - buildFunctionFormula()
        - buildPols()
        - createFunctionsList()
        - divideFuncs()
        - getNumber()
    }
  }
  

  namespace com.example.polynomial {
    class com.example.polynomial.tableRow {
        - coefficient : double
        - funcID : int
        - power : int
        + getCoefficient()
        + getFuncID()
        + getPower()
        + setCoefficient()
        + tableRow()
    }
  }
  

  com.example.polynomial.Graph -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.polynomial.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.polynomial.MainActivity o-- com.example.polynomial.MainActivity.MyAdapter : adapter
  com.example.polynomial.MainActivity +-down- com.example.polynomial.MainActivity.ListItem
  com.example.polynomial.MainActivity +-down- com.example.polynomial.MainActivity.MyAdapter
  com.example.polynomial.MainActivity +-down- com.example.polynomial.MainActivity.ViewHolder
  com.example.polynomial.MainActivity.MyAdapter -up-|> android.widget.BaseAdapter
  com.example.polynomial.PolynomialActions -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.polynomial.PolynomialActions o-- com.example.polynomial.PolynomialActions.MyAdapter : adapter
  com.example.polynomial.PolynomialActions +-down- com.example.polynomial.PolynomialActions.ListItem
  com.example.polynomial.PolynomialActions +-down- com.example.polynomial.PolynomialActions.MyAdapter
  com.example.polynomial.PolynomialActions +-down- com.example.polynomial.PolynomialActions.ViewHolder
  com.example.polynomial.PolynomialActions.MyAdapter -up-|> android.widget.BaseAdapter
  com.example.polynomial.PolynomialsView -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.polynomial.tableRow .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
